Code clean-up for a bunch of functions.